--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="images/april.jpg" alt="birthday-month-img" width="25%" class="profile-img">
 
         <h2>Hello.</h2>
-        <p class="profile-text">I am Navneet Singh a upcoming full stack developer. Intrested in server and data structure. Working on some projects🤐</p>
+        <p class="profile-text">I am Navneet Singh a upcoming full stack developer. Intrested in server and data structure. Working on some projects</p>
 
       </div>
       <hr>
